[B]1.1.6:[/B]
- another small fix of youtuberesolver
- fixed videobb and videozer resovlers, thanks to Lynx187
[B]1.1.5:[/B]
- added higher level searching API
- fixed youtuberesolver
[B]1.1.4:[/B]
- added dependency on script.usage.tracker
[B]1.1.3:[/B]
- download notification: added EST
[B]1.1.2:[/B]
- saved searches can be removed now
[B]1.1.0:[/B]
- added new API for retrieving common icons from github
- fixed downloading to report dialog on finish (when not playing)
[B]1.0.8:[/B]
- added new API for downloading, browsing local folders
- fixed string encoding issues
- fixed zideo resolver
[B]1.0.7:[/B]
- added servertip.cz resolver
- fixed youtube
- added api for search history
- added simplejson dependency
[B]1.0.6:[/B]
- added zideo.nl
- stagevu - do not fail if movie was removed
- videobb - proper resolving
[B]1.0.5:[/B]
- added novamov, youtube, trivial - special does nothing
- fixed megavideo and videozer 
[B]1.0.4:[/B]
- added megavideo, videozer resolvers
- fixed zkouknito
[B]1.0.3:[/B]
- added other resolvers
- added simple debug logging
- all resovlers renamed not to collide with other 3rd party on Camelot
[B]1.0.1:[/B]
 - added putlocker resolver
[B]1.0.0:[/B]
Initial version