@@ -23,7 +23,7 @@ import re,util,base64
 
 from base64 import b64decode
 from binascii import unhexlify
-
+__name__ = 'videozer'
 def supports(url):
 	return not _regex(url) == None
 
