@@ -20,7 +20,7 @@
 # *
 # */
 import re,util
-
+__name__ = 'vkontakte'
 def supports(url):
 	return not _regex(url) == None
 
@@ -43,6 +43,31 @@ def url(url):
 					res=0
 				resolutions=['240','360','480','720','1080']
 				return [url+'.'+resolutions[res]+'.mp4']
+
+def resolve(link):
+	if not _regex(link) == None:
+		data = util.request(link)
+		data = util.substr(data,'div id=\"playerWrap\"','<embed>')
+		if len(data) > 0:
+			host = re.search('host=([^\&]+)',data,re.IGNORECASE | re.DOTALL).group(1)
+			oid = re.search('oid=([^\&]+)',data,re.IGNORECASE | re.DOTALL).group(1)
+			vtag = re.search('vtag=([^\&]+)',data,re.IGNORECASE | re.DOTALL).group(1)
+			hd = re.search('hd_def=([^\&]+)',data,re.IGNORECASE | re.DOTALL).group(1)
+			no_flv = re.search('no_flv=([^\&]+)',data,re.IGNORECASE | re.DOTALL).group(1)
+			url = '%su%s/video/%s' % (host,oid,vtag)
+			if no_flv != '1':
+				return [{'name':__name__,'quality':'???','url':url+'.flv','surl':link}]
+			if no_flv == '1':
+				res=int(hd)
+				if res < 0:
+					return [{'name':__name__,'quality':'240p','url':url+'.flv','surl':link}]
+				resolutions=['240','360','480','720','1080']
+				ret = []
+				for index,resolution in enumerate(resolutions):
+					if index>res:
+						return ret
+					ret.append({'name':__name__,'quality':resolution+'p','url':url+'.'+resolution+'.mp4','surl':link})
+				return ret
 
 def _regex(data):
 	return re.search('http\://(vkontakte.ru|vk.com)/(.+?)', data, re.IGNORECASE | re.DOTALL)
