@@ -2,4 +2,5 @@
 <strings>
 	<string id="30003">[B]Vyhledat[/B]</string>
 	<string id="30004">[B]Nové hledání[/B]</string>
+	<string id="30005">Vyberte zdroj</string>
 </strings>
