@@ -2,4 +2,5 @@
 <strings>
 	<string id="30003">[B]Search[/B]</string>
 	<string id="30004">[B]New search[/B]</string>
+	<string id="30005">Select source</string>
 </strings>
